[package]
name = "eodms-data-downloader"
version = "1.0.2"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = "4"
url = "2"
log = { version = "0.4" }
log4rs = "1.2"
simple-error = "0.2"
env-var = "1"
regex = "1"
rand = "0.8"
dirs = "4.0"
rust-ini = "0.18"
